--- a/app/src/main/res/layout/activity_act.xml
+++ b/app/src/main/res/layout/activity_act.xml
@@ -30,16 +30,45 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
-            android:id="@+id/collect_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginTop="664dp"
-            android:text="Collect"
+            android:id="@+id/deep_pothole_bt"
+            android:layout_width="117dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="660dp"
+            android:text="Deep POTHOLE"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/big_pothole_bt"
+            android:layout_width="112dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="264dp"
+            android:layout_marginTop="520dp"
+            android:text="Big Pothole"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/little_pothole_bt"
+            android:layout_width="133dp"
+            android:layout_height="57dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="520dp"
+            android:text="Little Pothole"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/speed_bump_bt"
+            android:layout_width="112dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="264dp"
+            android:layout_marginTop="660dp"
+            android:text="Speed Bump"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -246,6 +275,7 @@
             android:layout_width="342dp"
             android:layout_height="259dp"
             android:layout_marginTop="392dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
             app:layout_constraintStart_toStartOf="parent"
